Se modifica texto

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -101,8 +101,8 @@
                         panadería, nos caraterizamos en hacer tus momentos únicos he inolvidables
                         , y formar parte de sus alegrías. Antes de realizar cualquier entrega hacemos 
                         las pruebas pertinentes para entregar un producto de calidad.
-                        Nuestro lema es amor y pasión por lo que hacemos para nuestros productos siempre
-                        sean lo mejor. 
+                        Nuestro lema es amor y pasión por lo que hacemos, para que nuestros productos siempre
+                        sean de la mejor calidad. 
                     </article>
                 </section>
                 <section class="imgNosotros col-lg-12 col-md-12 d-flex my-2 p-2">
