--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -164,7 +164,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="page-header my-3">
-                                <h3 class="text-center">Nuestros trabajos personalizados</h3>
+                                <h3 class="text-center">Trabajos personalizados</h3>
                             </div>
                             <div class="d-flex justify-content-evenly flex-wrap mb-5">
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
