Se implementa Google  Analytics para tener informacion completa del sitio, se traslada la carpeta trabajosPersonalizados a la carpeta img para tener un mejor orden y estructura, Se implementa seo, se modifican textos en nosotoros

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6Q0YC1KCET"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6Q0YC1KCET');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -29,7 +38,7 @@
                 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><strong>Epikus Cake</strong></h5>
+                        <h3 class="offcanvas-title" id="offcanvasNavbarLabel"><strong>Epikus Cake</strong></h3>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body d-flex justify-content-md-evenly">
@@ -104,13 +113,13 @@
                         <div class="padreCarrito my-4 col-lg-12 col-md-12">
                             <div class="padreCarrito__inputs d-flex justify-content-lg-evenly justify-content-sm-evenly justify-content-evenly col-12">
                                     <div class="carrito__inputs d-flex justify-content-center align-items-center rounded-4 col-3 col-md-3 col-lg-3 mx-1">
-                                        <h6 class="text-center">Dirección de entrega</h6> 
+                                        <h2 class="text-center">Dirección de entrega</h2> 
                                     </div>
                                     <div class="carrito__inputs d-flex justify-content-center align-items-center rounded-4 col-3 col-md-3 col-lg-3 mx-1">
-                                        <h6 class="text-center">Forma de Pago</h6> 
+                                        <h2 class="text-center">Forma de Pago</h2> 
                                     </div>
                                     <div class="carrito__inputs d-flex justify-content-center align-items-center rounded-4 col-3 col-md-3 col-lg-3 mx-1">
-                                        <h6 class="text-center">¡Último Paso!</h6> 
+                                        <h2 class="text-center">¡Último Paso!</h2> 
                                     </div>
                             </div>
                         </div>
@@ -118,10 +127,10 @@
                             <div class="direccion__padre mx-lg-4 p-3 rounded-4">
                                 <div class="direccion__carrito d-flex mx-lg-3 my-3">
                                     <i class="fa-solid fa-location-dot"></i>
-                                    <h6 class="mx-2"><strong>Usuario</strong> Humberto Primo 3076</h6>
+                                    <h2 class="mx-2"><strong>Usuario</strong> Humberto Primo 3076</h2>
                                 </div>
                                 <div class="carrito__inputs d-flex justify-content-center align-items-center rounded-4 mx-lg-3 my-5 col-5 col-lg-3 col-sm-4">
-                                    <h6>Agregar Nueva</h6> 
+                                    <h2>Agregar Nueva</h2> 
                                 </div>
                             </div>
                             <div class="carrito__buttonDireccion d-flex justify-content-end">
@@ -134,31 +143,31 @@
                     <h2 class="my-lg-5 my-md-5 text-center my-sm-5 my-xs-5">Tu pedido</h2>
                     <div class="page-header mx-2 carrito__lista rounded-4 mb-lg-4 mb-md-4">
                         <div class="carrito__lista__contenedorImg d-flex justify-content-center p-2 mx-2">
-                            <h5 ><b id="texto"></b></h5>
+                            <h3 ><b id="texto"></b></h3>
                         </div>
                         <div class="carrito__lista__precios d-flex justify-content-between align-items-center p-2 mx-2">
-                            <h5>Cake1</h5><h5>$100</h5>
+                            <h3>Cuadrado de frutilla</h3><h3>$600</h3>
                         </div>
                         <div class="carrito__lista__precios d-flex justify-content-between align-items-center p-2 mx-2">
-                            <h5>Cake2</h5><h5>$100</h5>
+                            <h3>Cheesecake New York</h3><h3>$600</h3>
                         </div>
                         <div class="carrito__lista__precios d-flex justify-content-between align-items-center p-2 mx-2">
-                            <h5>Cake3</h5><h5>$100</h5>
+                            <h3>Torta Red Velvet</h3><h3>$600</h3>
                         </div>
                         <div class="carrito__lista__precios d-flex justify-content-between align-items-center p-2 mx-2">
-                            <h5>Cake3</h5><h5>$100</h5>
+                            <h3>Torta de Chocolate</h3><h3>$600</h3>
                         </div>
                         <div class="carrito__lista__precios d-flex justify-content-between align-items-center p-2 mx-2">
-                            <h5>Cake4</h5><h5>$100</h5>
+                            <h3>Macarrones</h3><h3>$600</h3>
                         </div>
                         <div class="carrito__lista__precios d-flex justify-content-between align-items-center p-2 mx-2">
-                            <h6>Subtotal</h6><h6><strong>$400</strong></h6>
+                            <h5>Subtotal</h5><h5><strong>$3000</strong></h5>
                         </div>
                         <div class="carrito__lista__precios d-flex justify-content-between align-items-center p-2 mx-2">
-                            <h6>Envío</h6><h6><strong>$400</strong></h6>
+                            <h5>Envío</h5><h5><strong>$400</strong></h5>
                         </div>
                         <div class="carrito__lista__precios d-flex justify-content-between align-items-center p-2 mx-2">
-                            <h4>Total</h4><h4><strong>$800</strong></h4>
+                            <h4>Total</h4><h4><strong>$3400</strong></h4>
                         </div>
                     </div>
                     <div class="carrito__buttonLista d-flex justify-content-end">
@@ -186,19 +195,19 @@
                 </div>
             </section>
             <section class="footer__desktop__derechos d-flex flex-column align-items-center ">
-                <h5><strong>Derechos Reservados Epikus Cake, S.A. 2022 ©</strong></h5>
-                <h6>Desarrollado por Cesar Di Leonardo</h6>
+                <h3><strong>Derechos Reservados Epikus Cake, S.A. 2022 ©</strong></h3>
+                <h4>Desarrollado por Cesar Di Leonardo</h4>
             </section>
             <section class="footer__desktop__horarios d-flex flex-column align-items-center p-3">
-                <h5 class="my-2"><strong>Horarios</strong></h5>
+                <h3 class="my-2"><strong>Horarios</strong></h3>
                 <div class="footer__desktop__contenedorHorarios d-flex">
                     <div class="footer__diasSemanaTexto d-flex flex-column align-items-center m-2">
-                        <h6>Lunes a Viernes</h6>
-                        <h6><i class="fa-regular fa-clock m-2"></i>09:00am -06:00pm </h6>
+                        <h4>Lunes a Viernes</h4>
+                        <h4><i class="fa-regular fa-clock m-2"></i>09:00am -06:00pm </h4>
                     </div>
                     <div class="footer__finDeSemanaTexto d-flex flex-column align-items-center m-2">
-                        <h6>Sábados</h6>
-                        <h6><i class="fa-regular fa-clock m-2"></i>09:00am-03:00pm</h6>
+                        <h4>Sábados</h4>
+                        <h4><i class="fa-regular fa-clock m-2"></i>09:00am-03:00pm</h4>
                     </div>
                 </div>
             </section>
