--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -2,13 +2,22 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6Q0YC1KCET"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6Q0YC1KCET');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta name="description" content="Empresa familiar que nace mediados del 2014 como hobby haciendo panes dulces
-    galletas, tortas, ha medida del tiempo fueron creciendo las ventas y las personas que nos compraban una vez
-    lo seguían haciendo, como también nos pedian otra variedad de dulces y tortas lo cual nos sirvió para estudiar 
-    y aprender mas sobre el oficio, hoy en día somos una empresa ya establecida con una gama de productos">
+    <meta name="description" content="Empresa familiar que nace mediados del 2014 como hobby haciendo panes,
+    galletas, tortas, ha medida del tiempo fueron creciendo las ventas, y las personas que nos compraban una vez
+    lo seguían haciendo. Como también nos pedian otra variedad de dulces y tortas, lo cual nos sirvió para estudiar 
+    y aprender mas sobre el oficio, hoy en día somos una empresa ya establecida con una gama de productos.">
     <!-- Incorporo iconos mediante fontawesome, para respetar el diseño de figma -->
     <link rel="stylesheet" href="../iconos/fontawesome/css/all.min.css">
     <!-- Incorporo bootstrap-->
@@ -31,7 +40,7 @@
                 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><strong>Epikus Cake</strong></h5>
+                        <h3 class="offcanvas-title" id="offcanvasNavbarLabel"><strong>Epikus Cake</strong></h3>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body d-flex justify-content-md-evenly">
@@ -101,8 +110,6 @@
                         panadería, nos caraterizamos en hacer tus momentos únicos he inolvidables
                         , y formar parte de sus alegrías. Antes de realizar cualquier entrega hacemos 
                         las pruebas pertinentes para entregar un producto de calidad.
-                        Nuestro lema es amor y pasión por lo que hacemos, para que nuestros productos siempre
-                        sean de la mejor calidad. 
                     </article>
                 </section>
                 <section class="imgNosotros col-lg-12 col-md-12 d-flex my-2 p-2">
@@ -169,85 +176,85 @@
                             <div class="d-flex justify-content-evenly flex-wrap mb-5">
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/minios.jpeg"
+                                        <img src="../img/trabajosPersonalizados/minios.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/ariel.jpeg"
+                                        <img src="../img/trabajosPersonalizados/ariel.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/nba.jpeg"
+                                        <img src="../img/trabajosPersonalizados/nba.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/play.jpeg"
+                                        <img src="../img/trabajosPersonalizados/play.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/et.jpeg"
+                                        <img src="../img/trabajosPersonalizados/et.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/minecrasft.jpeg"
+                                        <img src="../img/trabajosPersonalizados/minecrasft.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/sebas.jpeg"
+                                        <img src="../img/trabajosPersonalizados/sebas.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/mujerMaravilla.jpeg"
+                                        <img src="../img/trabajosPersonalizados/mujerMaravilla.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/halowen.jpeg"
+                                        <img src="../img/trabajosPersonalizados/halowen.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/lol.jpeg"
+                                        <img src="../img/trabajosPersonalizados/lol.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/rugrats.jpeg"
+                                        <img src="../img/trabajosPersonalizados/rugrats.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/chocoTorta.jpeg"
+                                        <img src="../img/trabajosPersonalizados/chocoTorta.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/chocoRosa.jpeg"
+                                        <img src="../img/trabajosPersonalizados/chocoRosa.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                                     <div class="thumbnail m-3 p-3">
-                                        <img src="../trabajosPersonalizados/up.jpeg"
+                                        <img src="../img/trabajosPersonalizados/up.jpeg"
                                             class="card-img-top thumbnail__img" alt="imagen pasteleria">
                                     </div>
                                 </div>
@@ -274,19 +281,19 @@
                 </div>
             </section>
             <section class="footer__desktop__derechos d-flex flex-column align-items-center ">
-                <h5><strong>Derechos Reservados Epikus Cake, S.A. 2022 ©</strong></h5>
-                <h6>Desarrollado por Cesar Di Leonardo</h6>
+                <h3><strong>Derechos Reservados Epikus Cake, S.A. 2022 ©</strong></h3>
+                <h4>Desarrollado por Cesar Di Leonardo</h4>
             </section>
             <section class="footer__desktop__horarios d-flex flex-column align-items-center p-3">
-                <h5 class="my-2"><strong>Horarios</strong></h5>
+                <h3 class="my-2"><strong>Horarios</strong></h3>
                 <div class="footer__desktop__contenedorHorarios d-flex">
                     <div class="footer__diasSemanaTexto d-flex flex-column align-items-center m-2">
-                        <h6>Lunes a Viernes</h6>
-                        <h6><i class="fa-regular fa-clock m-2"></i>09:00am -06:00pm </h6>
+                        <h4>Lunes a Viernes</h4>
+                        <h4><i class="fa-regular fa-clock m-2"></i>09:00am -06:00pm </h4>
                     </div>
                     <div class="footer__finDeSemanaTexto d-flex flex-column align-items-center m-2">
-                        <h6>Sábados</h6>
-                        <h6><i class="fa-regular fa-clock m-2"></i>09:00am-03:00pm</h6>
+                        <h4>Sábados</h4>
+                        <h4><i class="fa-regular fa-clock m-2"></i>09:00am-03:00pm</h4>
                     </div>
                 </div>
             </section>
@@ -294,7 +301,7 @@
         <div class="footer__responsive d-flex justify-content-center p-4 col-12">
             <div class="footer__responsive__carrito d-flex align-items-center justify-content-evenly rounded-5 col-12 p-3">
                 <a href="./carrito.html"><i class="fa-solid fa-cart-arrow-down"></i></a>
-                <a href="./carrito.html"><h5>Ver pedido<h5><strong><h5>$600</h5></strong></a>
+                <a href="./carrito.html"><h3>Ver pedido<h3><strong><h3>$600</h3></strong></a>
             </div>
         </div>
     </footer>
