--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6Q0YC1KCET"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6Q0YC1KCET');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -29,7 +38,7 @@
                 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><strong>Epikus Cake</strong></h5>
+                        <h3 class="offcanvas-title" id="offcanvasNavbarLabel"><strong>Epikus Cake</strong></h3>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body d-flex justify-content-md-evenly">
@@ -247,19 +256,19 @@
                 </div>
             </section>
             <section class="footer__desktop__derechos d-flex flex-column align-items-center ">
-                <h5><strong>Derechos Reservados Epikus Cake, S.A. 2022 ©</strong></h5>
-                <h6>Desarrollado por Cesar Di Leonardo</h6>
+                <h3><strong>Derechos Reservados Epikus Cake, S.A. 2022 ©</strong></h3>
+                <h4>Desarrollado por Cesar Di Leonardo</h4>
             </section>
             <section class="footer__desktop__horarios d-flex flex-column align-items-center p-3">
-                <h5 class="my-2"><strong>Horarios</strong></h5>
+                <h3 class="my-2"><strong>Horarios</strong></h3>
                 <div class="footer__desktop__contenedorHorarios d-flex">
                     <div class="footer__diasSemanaTexto d-flex flex-column align-items-center m-2">
-                        <h6>Lunes a Viernes</h6>
-                        <h6><i class="fa-regular fa-clock m-2"></i>09:00am -06:00pm </h6>
+                        <h4>Lunes a Viernes</h4>
+                        <h4><i class="fa-regular fa-clock m-2"></i>09:00am -06:00pm </h4>
                     </div>
                     <div class="footer__finDeSemanaTexto d-flex flex-column align-items-center m-2">
-                        <h6>Sábados</h6>
-                        <h6><i class="fa-regular fa-clock m-2"></i>09:00am-03:00pm</h6>
+                        <h4>Sábados</h4>
+                        <h4><i class="fa-regular fa-clock m-2"></i>09:00am-03:00pm</h4>
                     </div>
                 </div>
             </section>
@@ -269,7 +278,7 @@
                 class="footer__responsive__carrito d-flex align-items-center justify-content-evenly rounded-5 col-12 p-3">
                 <a href="./carrito.html"><i class="fa-solid fa-cart-arrow-down"></i></a>
                 <a href="./carrito.html">
-                    <h5>Ver pedido<h5><strong><h5>$600</h5></strong>
+                    <h3>Ver pedido<h3><strong><h3>$600</h3></strong>
                 </a>
             </div>
         </div>
